# MapG

./: .env.example  AGENTS.md  ARCHITECTURE.md  README.md  bug_scan_report.txt  engineApi.ts  fix_mercury.ts  index.html  metadata.json  package-lock.json  package.json  purge.txt  replace.ts  replace_all.ts  scaffold.ts  server.ts  temp_bug_list.txt  test-lenis.ts  vite.config.ts
components/motion-primitives/: text-shimmer.tsx
local_backend/: CMakeLists.txt  GuidanceComputer.hpp  Propagator.cpp  build.sh  compiler_test.txt  engine.cpp  main.py  odyssey_engine  requirements.txt  server.js
local_backend/src/: main.cpp
local_backend/src/core/: State.hpp  Time.cpp  Time.hpp
local_backend/src/ephem/: SpiceWrapper.cpp  SpiceWrapper.hpp
local_backend/src/mission/: LambertIzzo.cpp  LambertIzzo.hpp  Porkchop.cpp  Porkchop.hpp
local_backend/src/propagation/: Propagator.cpp  Propagator.hpp
public/textures/: README.txt
src/: App.tsx  OrbitSimulator.tsx  TrajectoryOptimizer.tsx  constants.ts  index.css  main.tsx  physics.ts  worker.ts
src/api/: client.ts
src/components/: CardSwap.css  CardSwap.tsx  FaultyTerminal.jsx  FlowingMenu.css  FlowingMenu.tsx  FlyingPosters.tsx  Galaxy.tsx  GradualBlur.css  GradualBlur.tsx  InteractiveBridge.tsx  InteractiveGlobe.tsx  LandingHero.tsx  LaunchHUD.tsx  LaunchSimulator.tsx  MathPhysicsShowcase.tsx  Planet2DMap.tsx  Prism.tsx  SatelliteBuilder.tsx  ScrollFloat.tsx  ScrollReveal.tsx  ShaderBackground.tsx  SpaceExplorationPanel.tsx  SrinivasaAIChat.tsx  StaggeredMenu.css  StaggeredMenu.tsx  TelemetryPanel.tsx  TextPressure.tsx  UnimpressedBlackhole.tsx  (+2 more)
(+30 files in other folders)
